--- a/index.html
+++ b/index.html
@@ -1,151 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Oakberry Shopping Cart</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fdf8f6;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 30px;
-      border-bottom: 1px solid #ddd;
-    }
-    header img {
-      height: 40px;
-    }
-    nav a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #3d0c4e;
-      font-weight: bold;
-    }
-    .cart-icon {
-      font-size: 18px;
-      color: #3d0c4e;
-    }
-    .product-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 20px;
-    }
-    .product-card {
-      background: white;
-      border: 1px solid #eee;
-      border-radius: 8px;
-      width: 220px;
-      margin: 10px;
-      padding: 15px;
-      text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .product-card img {
-      max-width: 100px;
-      margin-bottom: 10px;
-    }
-    .product-card h3 {
-      font-size: 16px;
-      color: #3d0c4e;
-      height: 60px;
-    }
-    .product-card .price {
-      font-size: 18px;
-      font-weight: bold;
-      color: #3d0c4e;
-    }
-    .product-card .quantity {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 10px 0;
-    }
-    .quantity button {
-      background-color: #3d0c4e;
-      color: white;
-      border: none;
-      width: 30px;
-      height: 30px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-    .quantity input {
-      width: 40px;
-      text-align: center;
-      border: 1px solid #ccc;
-      margin: 0 5px;
-      height: 30px;
-    }
-    .add-to-cart {
-      background-color: #3d0c4e;
-      color: white;
-      border: none;
-      padding: 10px;
-      width: 100%;
-      cursor: pointer;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <title>Login con Zoho</title>
 </head>
 <body>
-  <header>
-    <img src="logo-oakberry.png" alt="Oakberry Logo">
-    <nav>
-      <a href="#">Start</a>
-      <a href="#">Enterprise</a>
-      <a href="#">Segment</a>
-      <a href="#">Brands</a>
-      <a href="#">Contact</a>
-    </nav>
-    <div class="cart-icon">🛒 <span id="cart-count">0</span></div>
-  </header>
-
-  <div class="product-container">
-    <div class="product-card">
-      <img src="agua-coco.png" alt="Coconut Water">
-      <h3>Coconut Water 330ml w/12 - Oakberry</h3>
-      <p class="price">R$73.70</p>
-      <p><a href="#">Shipping Policy</a></p>
-      <div class="quantity">
-        <button class="minus">−</button>
-        <input type="text" value="1" readonly>
-        <button class="plus">+</button>
-      </div>
-      <button class="add-to-cart">Add to Cart</button>
-    </div>
-    <!-- Puedes duplicar más tarjetas como esta -->
-  </div>
+  <h1>Login con Zoho</h1>
+  <button onclick="loginWithZoho()">Conectar con Zoho</button>
 
   <script>
-    let cartCount = 0;
-    document.querySelectorAll('.add-to-cart').forEach(btn => {
-      btn.addEventListener('click', () => {
-        cartCount++;
-        document.getElementById('cart-count').textContent = cartCount;
-      });
-    });
+    function loginWithZoho() {
+      const clientId = "1000.91OKIP58EORRMDO1N15E9ZY1MZ6LTO";
+      const redirectUri = "https://gabrielsolera.github.io/shopping_cart/callback.html";
+      const scope = "AaaServer.profile.Read";
+      const responseType = "code";
 
-    document.querySelectorAll('.product-card').forEach(card => {
-      const minus = card.querySelector('.minus');
-      const plus = card.querySelector('.plus');
-      const input = card.querySelector('input');
-
-      minus.addEventListener('click', () => {
-        let value = parseInt(input.value);
-        if (value > 1) input.value = value - 1;
-      });
-
-      plus.addEventListener('click', () => {
-        let value = parseInt(input.value);
-        input.value = value + 1;
-      });
-    });
+      const url = `https://accounts.zoho.com/oauth/v2/auth?scope=${scope}&client_id=${clientId}&response_type=${responseType}&access_type=offline&redirect_uri=${encodeURIComponent(redirectUri)}`;
+      window.location.href = url;
+    }
   </script>
 </body>
 </html>
