--- a/callback.html
+++ b/callback.html
@@ -3,44 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <title>Callback Zoho</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 30px;
+      background: #fafafa;
+      color: #333;
+    }
+    h2 {
+      color: #3d0c4e;
+    }
+    pre {
+      background: #f4f4f4;
+      padding: 15px;
+      border: 1px solid #ddd;
+      font-size: 16px;
+      word-break: break-all;
+    }
+  </style>
 </head>
 <body>
   <h2>Zoho OAuth - Callback</h2>
+  <p>Este es tu código de autorización. Cópialo y úsalo en Postman:</p>
   <pre id="result">Procesando...</pre>
 
   <script>
     const params = new URLSearchParams(window.location.search);
     const code = params.get("code");
-
-    const clientId = "1000.91OKIP58EORRMDO1N15E9ZY1MZ6LTO";
-    const clientSecret = "a323bc477e46b206971cc708bb1a44a0fe21623d9e";
-    const redirectUri = "https://gabrielsolera.github.io/shopping_cart/callback.html";
+    const output = document.getElementById("result");
 
     if (code) {
-      const data = new URLSearchParams();
-      data.append("grant_type", "authorization_code");
-      data.append("client_id", clientId);
-      data.append("client_secret", clientSecret);
-      data.append("redirect_uri", redirectUri);
-      data.append("code", code);
-
-      fetch("https://accounts.zoho.com/oauth/v2/token", {
-        method: "POST",
-        headers: { "Content-Type": "application/x-www-form-urlencoded" },
-        body: data.toString()
-      })
-      .then(res => res.json())
-      .then(tokenData => {
-        document.getElementById("result").textContent = JSON.stringify(tokenData, null, 2);
-        localStorage.setItem("zoho_access_token", tokenData.access_token);
-        // Aquí podrías redirigir a otra página si lo deseas:
-        // window.location.href = "dashboard.html";
-      })
-      .catch(err => {
-        document.getElementById("result").textContent = "Error al obtener token: " + err;
-      });
+      output.textContent = code;
     } else {
-      document.getElementById("result").textContent = "No se recibió ningún código de autorización.";
+      output.textContent = "⚠️ No se recibió ningún código de autorización en la URL.";
     }
   </script>
 </body>
