--- a/dashboard.html
+++ b/dashboard.html
@@ -10,21 +10,25 @@
 
   <script>
     const accessToken = localStorage.getItem("zoho_access_token");
-    const orgId = "873616335"; // Tu Organization ID de Zoho
+    const orgId = "873616335";
 
     if (!accessToken) {
       document.getElementById("result").textContent = "Token no encontrado. Por favor inicia sesión primero.";
     } else {
-      fetch("https://www.zohoapis.com/inventory/v1/items", {
+      fetch("https://inventory.zoho.com/api/v1/items", {
         method: "GET",
         headers: {
           "Authorization": `Zoho-oauthtoken ${accessToken}`,
-          "orgId": orgId
+          "X-com-zoho-inventory-organizationid": orgId
         }
       })
       .then(res => res.json())
       .then(data => {
-        document.getElementById("result").textContent = JSON.stringify(data, null, 2);
+        if (data && data.items) {
+          document.getElementById("result").textContent = JSON.stringify(data.items, null, 2);
+        } else {
+          document.getElementById("result").textContent = "Error en respuesta:\n" + JSON.stringify(data, null, 2);
+        }
       })
       .catch(error => {
         document.getElementById("result").textContent = "Error al obtener items: " + error;
