--- a/callback.html
+++ b/callback.html
@@ -1,4 +1,4 @@
-<!-- callback.html -->
+<!-- callback.html actualizado -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,48 +10,38 @@
   <pre id="result">Procesando...</pre>
 
   <script>
-    async function obtenerToken() {
-      const params = new URLSearchParams(window.location.search);
-      const code = params.get("code");
+    const params = new URLSearchParams(window.location.search);
+    const code = params.get("code");
 
-      const clientId = "1000.91OKIP58EORRMDO1N15E9ZY1MZ6LTO";
-      const clientSecret = "a323bc477e46b206971cc708bb1a44a0fe21623d9e";
-      const redirectUri = "https://gabrielsolera.github.io/shopping_cart/callback.html";
+    const clientId = "1000.91OKIP58EORRMDO1N15E9ZY1MZ6LTO";
+    const clientSecret = "a323bc477e46b206971cc708bb1a44a0fe21623d9e";
+    const redirectUri = "https://gabrielsolera.github.io/shopping_cart/callback.html";
 
-      if (!code) {
-        document.getElementById("result").textContent = "No se recibió ningún código de autorización.";
-        return;
-      }
+    if (code) {
+      const data = new URLSearchParams();
+      data.append("grant_type", "authorization_code");
+      data.append("client_id", clientId);
+      data.append("client_secret", clientSecret);
+      data.append("redirect_uri", redirectUri);
+      data.append("code", code);
 
-      try {
-        const response = await fetch("https://accounts.zoho.com/oauth/v2/token", {
-          method: "POST",
-          headers: { "Content-Type": "application/x-www-form-urlencoded" },
-          body: new URLSearchParams({
-            grant_type: "authorization_code",
-            client_id: clientId,
-            client_secret: clientSecret,
-            redirect_uri: redirectUri,
-            code: code
-          })
-        });
-
-        const tokenData = await response.json();
-
-        if (tokenData.access_token) {
-          localStorage.setItem("zoho_access_token", tokenData.access_token);
-          document.getElementById("result").textContent = "Token obtenido exitosamente:\n" + JSON.stringify(tokenData, null, 2);
-          // Aquí puedes redirigir a otra vista
-          // window.location.href = "dashboard.html";
-        } else {
-          document.getElementById("result").textContent = "Error en respuesta:\n" + JSON.stringify(tokenData, null, 2);
-        }
-      } catch (error) {
-        document.getElementById("result").textContent = "Error al obtener token: " + error;
-      }
+      fetch("https://accounts.zoho.com/oauth/v2/token", {
+        method: "POST",
+        headers: { "Content-Type": "application/x-www-form-urlencoded" },
+        body: data.toString()
+      })
+      .then(res => res.json())
+      .then(tokenData => {
+        document.getElementById("result").textContent = JSON.stringify(tokenData, null, 2);
+        localStorage.setItem("zoho_access_token", tokenData.access_token);
+        window.location.href = "dashboard.html";
+      })
+      .catch(err => {
+        document.getElementById("result").textContent = "Error al obtener token: " + err;
+      });
+    } else {
+      document.getElementById("result").textContent = "No se recibió ningún código de autorización.";
     }
-
-    obtenerToken();
   </script>
 </body>
 </html>
