--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,4 @@
+<!-- dashboard.html nuevo -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,7 +11,7 @@
 
   <script>
     const accessToken = localStorage.getItem("zoho_access_token");
-    const orgId = "873616335"; // Tu Organization ID de Zoho
+    const orgId = "873616335";
 
     if (!accessToken) {
       document.getElementById("result").textContent = "Token no encontrado. Por favor inicia sesión primero.";
