--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,3 @@
-<!-- dashboard.html nuevo -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,27 +9,68 @@
   <pre id="result">Cargando...</pre>
 
   <script>
-    const accessToken = localStorage.getItem("zoho_access_token");
-    const orgId = "873616335";
+    const orgId = "873616335"; // Tu Organization ID
+    const clientId = "1000.91OKIP58EORRMDO1N15E9ZY1MZ6LTO";
+    const clientSecret = "a323bc477e46b206971cc708bb1a44a0fe21623d9e";
+    const refreshToken = localStorage.getItem("zoho_refresh_token");
+    const tokenExpiry = localStorage.getItem("zoho_token_expiry");
 
-    if (!accessToken) {
-      document.getElementById("result").textContent = "Token no encontrado. Por favor inicia sesión primero.";
-    } else {
-      fetch("https://www.zohoapis.com/inventory/v1/items", {
-        method: "GET",
-        headers: {
-          "Authorization": `Zoho-oauthtoken ${accessToken}`,
-          "orgId": orgId
+    async function getAccessToken() {
+      const now = Date.now();
+      let accessToken = localStorage.getItem("zoho_access_token");
+
+      if (!accessToken || now > tokenExpiry) {
+        if (!refreshToken) {
+          throw new Error("No hay refresh token. Inicia sesión de nuevo.");
         }
-      })
-      .then(res => res.json())
-      .then(data => {
-        document.getElementById("result").textContent = JSON.stringify(data, null, 2);
-      })
-      .catch(error => {
-        document.getElementById("result").textContent = "Error al obtener items: " + error;
-      });
+
+        const data = new URLSearchParams();
+        data.append("refresh_token", refreshToken);
+        data.append("client_id", clientId);
+        data.append("client_secret", clientSecret);
+        data.append("grant_type", "refresh_token");
+
+        const res = await fetch("https://accounts.zoho.com/oauth/v2/token", {
+          method: "POST",
+          headers: { "Content-Type": "application/x-www-form-urlencoded" },
+          body: data.toString()
+        });
+
+        const tokenData = await res.json();
+
+        if (!tokenData.access_token) {
+          throw new Error("No se pudo renovar el token.");
+        }
+
+        accessToken = tokenData.access_token;
+        localStorage.setItem("zoho_access_token", accessToken);
+        localStorage.setItem("zoho_token_expiry", Date.now() + tokenData.expires_in * 1000);
+      }
+
+      return accessToken;
     }
+
+    async function fetchItems() {
+      try {
+        const token = await getAccessToken();
+
+        const response = await fetch("https://www.zohoapis.com/inventory/v1/items", {
+          method: "GET",
+          headers: {
+            "Authorization": `Zoho-oauthtoken ${token}`,
+            "orgId": orgId
+          }
+        });
+
+        const data = await response.json();
+        document.getElementById("result").textContent = JSON.stringify(data, null, 2);
+
+      } catch (err) {
+        document.getElementById("result").textContent = "Error: " + err.message;
+      }
+    }
+
+    fetchItems();
   </script>
 </body>
 </html>
