--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index.html -->
+<!-- index.html actualizado -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +12,7 @@
   <script>
     function loginWithZoho() {
       const clientId = "1000.91OKIP58EORRMDO1N15E9ZY1MZ6LTO";
-      const redirectUri = "https://gabrielsolera.github.io/shopping_cart/callback.html";
+      const redirectUri = "https://script.google.com/macros/d/PASTE_YOUR_DEPLOYMENT_ID_HERE/usercallback";
       const scope = "ZohoInventory.fullaccess.all";
       const responseType = "code";
 
